# betok_backend

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.github/workflows/: postman.yml  tests.yml  versioning.yml
alembic/: env.py
alembic/versions/: a7fa5218ed47_init.py  add_comments_table.py  e0a4f733b1bb_create_videos_table.py  f757538c96e5_initial_schema.py
src/api/v1/endpoints/: comments.py  followers.py  likes.py  videos.py
src/core/: config.py  db.py
src/crud/: comments_operations.py  likes_operations.py  video_upload.py
src/models/: comments.py  likes.py  video.py
src/schemas/: schemas.py
src/tests/: README.md  conftest.py  test_crud_operations.py  test_models.py  test_videos_api.py
