[tool.poetry]
name = "betok"
version = "0.1.0"
description = ""
authors = ["Noah <noahnap@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}

[tool.poetry.group.dev.dependencies]
commitizen = "^4.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
